--- a/PUTVision_Utils/PUTVision_Utils.csproj
+++ b/PUTVision_Utils/PUTVision_Utils.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{402187FF-4B69-44EA-BEC9-492EBD7FF244}</ProjectGuid>
+    <ProjectGuid>{071E6A2B-C2A6-4F62-8FE8-8BF10ADCB192}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CameraBase</RootNamespace>
-    <AssemblyName>CameraBase</AssemblyName>
+    <RootNamespace>PUTVision_Utils</RootNamespace>
+    <AssemblyName>PUTVision_Utils</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -40,14 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CameraBase.cs" />
+    <Compile Include="PUTVision_Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PUTVision_Utils\PUTVision_Utils.csproj">
-      <Project>{071e6a2b-c2a6-4f62-8fe8-8bf10adcb192}</Project>
-      <Name>PUTVision_Utils</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
