--- a/TestCamera/TestCamera.csproj
+++ b/TestCamera/TestCamera.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{402187FF-4B69-44EA-BEC9-492EBD7FF244}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{FCA4C607-86EB-47D3-955C-2C4075016A81}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CameraBase</RootNamespace>
-    <AssemblyName>CameraBase</AssemblyName>
+    <RootNamespace>Test_CameraEmguCV</RootNamespace>
+    <AssemblyName>Test_CameraEmguCV</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -20,9 +21,9 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -37,16 +38,57 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CameraBase.cs" />
+    <Compile Include="frmTestCamera.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmTestCamera.Designer.cs">
+      <DependentUpon>frmTestCamera.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmTestCamera.resx">
+      <DependentUpon>frmTestCamera.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PUTVision_Utils\PUTVision_Utils.csproj">
-      <Project>{071e6a2b-c2a6-4f62-8fe8-8bf10adcb192}</Project>
-      <Name>PUTVision_Utils</Name>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CameraBase\CameraBase.csproj">
+      <Project>{402187ff-4b69-44ea-bec9-492ebd7ff244}</Project>
+      <Name>CameraBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CameraPointGrey\CameraPointGrey.csproj">
+      <Project>{245d2bb2-74f5-4841-a944-8a06ecb04f9d}</Project>
+      <Name>CameraPointGrey</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ICamera\ICamera.csproj">
+      <Project>{fd66191d-1920-4415-9df2-5167ae462277}</Project>
+      <Name>ICamera</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
