Added Pylon.NETSupportLibrary from Basler examples to allow compilation on computers without Pylon SDK. Added a fix to the way the images are saved - previous version was saving buffer with data while it was changed.

--- a/KalibracjaKamery_11-12/KalibracjaKamery/KalibracjaKamery.csproj
+++ b/KalibracjaKamery_11-12/KalibracjaKamery/KalibracjaKamery.csproj
@@ -37,9 +37,6 @@
       <HintPath>C:\Program Files\Basler\pylon 4\pylonc.net\bin\PylonC.NET.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="PylonC.NETSupportLibrary">
-      <HintPath>..\..\..\kalibracja 1.2\PanelOsobny\bin\Debug\PylonC.NETSupportLibrary.dll</HintPath>
-    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
@@ -106,7 +103,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Pylon.NETSupportLibrary\Pylon.NETSupportLibrary.csproj">
+      <Project>{3eafc9f5-d49f-4f9f-86c8-fbd231b07d2e}</Project>
+      <Name>Pylon.NETSupportLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\alertIcon.png" />
   </ItemGroup>
