--- a/KalibracjaKamery_11-12/KalibracjaKamery/CamerasControler.csproj
+++ b/KalibracjaKamery_11-12/KalibracjaKamery/CamerasControler.csproj
@@ -124,6 +124,14 @@
       <Project>{42bc6fb0-8252-4d41-ade4-c92949d04332}</Project>
       <Name>BaslerCenter</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\CameraBase\CameraBase.csproj">
+      <Project>{402187ff-4b69-44ea-bec9-492ebd7ff244}</Project>
+      <Name>CameraBase</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\CameraBasler\CameraBasler.csproj">
+      <Project>{89a3b507-78db-47fc-9730-f487e5aabb64}</Project>
+      <Name>CameraBasler</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Pylon.NETSupportLibrary\Pylon.NETSupportLibrary.csproj">
       <Project>{3eafc9f5-d49f-4f9f-86c8-fbd231b07d2e}</Project>
       <Name>Pylon.NETSupportLibrary</Name>
